tests/baselines/reference/unicodeExtendedEscapesInStrings21_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES5.ts(2,15): error TS1199: '}' expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings21_ES5.ts (1 errors) ====
    
    var x = "\u{67";
                  
!!! error TS1199: '}' expected.
    